--- a/payment-front/index.html
+++ b/payment-front/index.html
@@ -5,7 +5,7 @@
     <link href="/favicon.ico" rel="icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="//lib.baomitu.com/element-plus/2.2.32/index.css" rel="stylesheet"/>
-    <title>Vite App</title>
+    <title>管理平台</title>
     <style>
         body {
             margin: 0;
